# n3mapping

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  n3mapping_lio_workspace.repos  package.xml
.github/workflows/: ros-ci.yml
cmake/: n3mapping_checks.cmake  n3mapping_core.cmake  n3mapping_humble.cmake  n3mapping_nav_resource_reader.cmake  n3mapping_ros2.cmake  n3mapping_tests.cmake
config/: n3mapping.yaml
docs/: README.md  TODO_loop_z_drift.md  better_loop_status.md  eval_benchmark_plan.md  kitti360_reader.md  m2dgr_eval.md  relocalization_strategy_2026.md
humble/: CMakeLists.txt  launch  package.xml
humble/launch/: map_extension.launch.py  mapping.launch.py  n3.rviz  synthetic_relocalization_visualization.launch.py
humble/src/: config_humble.cpp  n3mapping_node.cpp
include/Scancontext/: HybridScancontext.cpp  HybridScancontext.h  Scancontext.h
include/n3mapping/: RHPDescriptor.h  cloud_utils.h  config.h  global_map_cache.h  graph_optimizer.h  keyframe.h  keyframe_manager.h  loop_closure_manager.h  loop_consensus_verifier.h  loop_debug_logger.h  loop_detector.h  loop_graph_trial_diagnostics.h  loop_heightmap_diagnostics.h  loop_referee.h  loop_segment_consistency.h  loop_verifier.h  map_extension_module.h  map_serializer.h  mapping_resuming.h  mode_handlers.h  n3map_nav_resource_reader.h  n3map_proto_utils.h  pcl_compat.h  point_cloud_matcher.h  relocalization_debug_logger.h  relocalization_module.h  synthetic_relocalization_query.h  world_localizing.h
include/n3mapping/core/: localization_mode_processor.h  map_extension_mode_processor.h  mapping_mode_processor.h  n3mapping_core.h  n3mapping_session.h  pipeline_coordinator.h  types.h
include/n3mapping/humble/: config_humble.h  conversions.h
include/n3mapping/lio/: core_state.h  dlio_cloud_adapter.h  dlio_core.h  dlio_deskew.h  dlio_frontend.h  dlio_imu_integration.h  dlio_input_adapter.h  dlio_map_accumulator.h  dlio_scan_timing.h  dlio_settings.h  external_frontend.h  (+11 more)
launch/: localization.launch  localization.launch.py  map_extension.launch  map_extension.launch.py  mapping.launch  mapping.launch.py  n3.rviz  n3_loc.rviz  synthetic_relocalization_visualization.launch  synthetic_relocalization_visualization.launch.py  synthetic_relocalization_visualization.rviz  synthetic_relocalization_visualization_noetic.rviz
noetic/: CMakeLists.txt  package.xml
noetic/include/n3mapping_noetic/: config_noetic.h
noetic/launch/: localization.launch  map_extension.launch  mapping.launch  n3_noetic.rviz  synthetic_relocalization_visualization.launch
noetic/src/: config_noetic.cpp  conversions.cpp  n3mapping_noetic_node.cpp  synthetic_relocalization_visualizer.cpp
proto/: n3map.proto
ros1/: CMakeLists.txt  package.xml
ros1/include/n3mapping_ros1/: config_ros1.h  conversions.h
ros1/src/: config_ros1.cpp  conversions.cpp  n3mapping_ros1_node.cpp
scripts/: select_distro_wrapper.sh
src/: RHPDescriptor.cpp  config.cpp  global_map_cache.cpp  graph_optimizer.cpp  keyframe_manager.cpp  loop_closure_manager.cpp  loop_consensus_verifier.cpp  loop_debug_logger.cpp  loop_detector.cpp  loop_graph_trial_diagnostics.cpp  loop_heightmap_diagnostics.cpp  loop_segment_consistency.cpp  loop_verifier.cpp  map_extension_module.cpp  map_serializer.cpp  mapping_resuming.cpp  mode_handlers.cpp  n3map_nav_resource_reader.cpp  n3map_proto_utils.cpp  n3mapping_node.cpp  point_cloud_matcher.cpp  relocalization_debug_logger.cpp  relocalization_module.cpp  world_localizing.cpp
src/core/: localization_mode_processor.cpp  map_extension_mode_processor.cpp  mapping_mode_processor.cpp  n3mapping_core.cpp  n3mapping_session.cpp  pipeline_coordinator.cpp
src/humble/: conversions.cpp
src/lio/: core_state.cpp  dlio_cloud_adapter.cpp  dlio_core.cpp  dlio_core_library.cpp  dlio_deskew.cpp  dlio_frontend.cpp  dlio_imu_integration.cpp  dlio_input_adapter.cpp  dlio_map_accumulator.cpp  dlio_scan_timing.cpp  dlio_settings.cpp  external_frontend.cpp  fast_lio_cloud_adapter.cpp  fast_lio_core.cpp  fast_lio_core_library.cpp  fast_lio_frontend.cpp  fast_lio_input_adapter.cpp  fast_lio_settings.cpp  frontend_config.cpp  frontend_factory.cpp  imu_propagator.cpp  imu_sample_buffer.cpp  local_map.cpp
src/ros2/: config_ros.cpp  config_ros2.cpp  conversions.cpp  mode_handlers.cpp  n3mapping_node.cpp
test/: check_core_no_ros_deps.cmake  check_core_no_ros_includes.cmake  check_humble_wrapper_no_direct_backend_calls.cmake  check_lio_core_library_name.cmake  check_noetic_wrapper.cmake  check_ros1_wrapper_skeleton.cmake  check_ros2_wrapper_no_direct_backend_calls.cmake  check_wrapper_no_algorithm_duplication.cmake  test_config.cpp  test_config_defaults.cpp  test_core_types.cpp  test_dlio_cloud_adapter.cpp  test_dlio_core.cpp  test_dlio_deskew.cpp  test_dlio_imu_integration.cpp  test_dlio_input_adapter.cpp  test_dlio_map_accumulator.cpp  test_dlio_scan_timing.cpp  test_dlio_settings.cpp  test_external_lio_frontend.cpp  test_fast_lio_cloud_adapter.cpp  test_fast_lio_core.cpp  test_fast_lio_input_adapter.cpp  test_fast_lio_settings.cpp  test_global_map_cache.cpp  test_graph_optimizer.cpp  test_graph_optimizer_pbt.cpp  test_humble_conversions.cpp  test_imu_propagator.cpp  test_imu_sample_buffer.cpp  test_keyframe_manager.cpp  test_kitti360_eval.cpp  test_kitti360_reader.cpp  test_lio_core_state.cpp  test_lio_frontend_factory.cpp  test_lio_local_map.cpp  test_localization_mode_processor.cpp  test_loop_closure_manager.cpp  test_loop_consensus_verifier.cpp  test_loop_debug_logger.cpp  (+27 more)
tools/: n3mapping_eval_matrix.py  n3mapping_filter_nav_pbstream.cpp  n3mapping_kitti360_eval.cpp  n3mapping_kitti360_reader.cpp  n3mapping_loop_candidate_benchmark.py  n3mapping_loop_debug_analyze.py  n3mapping_loop_evidence_correlation.py  n3mapping_loop_glimstyle_benchmark.py  n3mapping_loop_stdlite_benchmark.py  n3mapping_m2dgr_eval.cpp  n3mapping_synthetic_relocalization_eval.cpp  n3mapping_synthetic_relocalization_publisher.cpp  n3mapping_synthetic_relocalization_visualizer.cpp  n3mapping_tum_loop_opportunities.py  run_synthetic_relocalization_matrix.py
(+4 files in other folders)
